[package]
name = "rust-sse-demo"
version = "0.1.0"
authors = ["Rüdiger Klaehn <rklaehn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.1.19"
futures01 = { package = "futures", version = "0.1" }
tokio = "0.1.22"
hyper = "0.12"
flate2 = "1.0.11"

